--- a/Todo/src/main/resources/application.properties
+++ b/Todo/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#server.port=8081
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=MST7MDT
+spring.mvc.contentnegotiation.favor-parameter=true
